src/tests/snapshots/cendol__tests__codegen_basics__boolean_logic_lowering.snap
---
source: src/tests/codegen_basics.rs
assertion_line: 172
expression: clif_dump
---
; Function: main
function u0:0() -> i32 system_v {
    ss0 = explicit_slot 4
    ss1 = explicit_slot 4
    ss2 = explicit_slot 4
    ss3 = explicit_slot 4
    ss4 = explicit_slot 4
    ss5 = explicit_slot 4

block0:
    v0 = iconst.i32 4
    v48 = stack_addr.i64 ss0
    store notrap v0, v48  ; v0 = 4
    v47 = stack_addr.i64 ss0
    v1 = load.i32 notrap v47
    v2 = iconst.i32 0
    v3 = icmp eq v1, v2  ; v2 = 0
    v4 = iconst.i32 1
    v5 = iconst.i32 0
    v6 = select v3, v4, v5  ; v4 = 1, v5 = 0
    v46 = stack_addr.i64 ss1
    store notrap v6, v46
    v45 = stack_addr.i64 ss1
    v7 = load.i32 notrap v45
    v8 = iconst.i32 0
    v9 = icmp ne v7, v8  ; v8 = 0
    v10 = iconst.i32 1
    v11 = iconst.i32 0
    v12 = select v9, v10, v11  ; v10 = 1, v11 = 0
    v44 = stack_addr.i64 ss2
    store notrap v12, v44
    v43 = stack_addr.i64 ss2
    v13 = load.i32 notrap v43
    brif v13, block1, block2

block2:
    jump block3

block3:
    v42 = stack_addr.i64 ss0
    v14 = load.i32 notrap v42
    v15 = iconst.i32 0
    v16 = icmp eq v14, v15  ; v15 = 0
    v17 = iconst.i32 1
    v18 = iconst.i32 0
    v19 = select v16, v17, v18  ; v17 = 1, v18 = 0
    v41 = stack_addr.i64 ss3
    store notrap v19, v41
    v40 = stack_addr.i64 ss3
    v20 = load.i32 notrap v40
    v21 = iconst.i32 0
    v22 = icmp eq v20, v21  ; v21 = 0
    v23 = iconst.i32 1
    v24 = iconst.i32 0
    v25 = select v22, v23, v24  ; v23 = 1, v24 = 0
    v39 = stack_addr.i64 ss4
    store notrap v25, v39
    v38 = stack_addr.i64 ss4
    v26 = load.i32 notrap v38
    v27 = iconst.i32 1
    v28 = icmp ne v26, v27  ; v27 = 1
    v29 = iconst.i32 1
    v30 = iconst.i32 0
    v31 = select v28, v29, v30  ; v29 = 1, v30 = 0
    v37 = stack_addr.i64 ss5
    store notrap v31, v37
    v36 = stack_addr.i64 ss5
    v32 = load.i32 notrap v36
    brif v32, block4, block5

block5:
    jump block6

block6:
    v33 = iconst.i32 0
    return v33  ; v33 = 0

block4:
    v34 = iconst.i32 1
    return v34  ; v34 = 1

block1:
    v35 = iconst.i32 1
    return v35  ; v35 = 1
}
