src/tests/snapshots/cendol__tests__codegen_basics__float_to_char_conversion.snap
---
source: src/tests/codegen_basics.rs
assertion_line: 186
expression: clif_dump
---
; Function: main
function u0:0() -> i32 system_v {
    ss0 = explicit_slot 1
    ss1 = explicit_slot 2

block0:
    v0 = f64const 0x1.8400000000000p6
    v1 = fcvt_to_uint.i32 v0  ; v0 = 0x1.8400000000000p6
    v2 = ireduce.i8 v1
    v8 = stack_addr.i64 ss0
    store notrap v2, v8
    v3 = f64const 0x1.8800000000000p6
    v4 = fcvt_to_uint.i32 v3  ; v3 = 0x1.8800000000000p6
    v5 = ireduce.i16 v4
    v7 = stack_addr.i64 ss1
    store notrap v5, v7
    v6 = iconst.i32 0
    return v6  ; v6 = 0
}
