src/tests/snapshots/cendol__tests__codegen_basics__store_deref_pointer.snap
---
source: src/tests/codegen_basics.rs
assertion_line: 152
expression: clif_ir
---
; Function: main
function u0:0() system_v {
    ss0 = explicit_slot 4
    ss1 = explicit_slot 8

block0:
    v0 = iconst.i32 10
    v6 = stack_addr.i64 ss0
    store notrap v0, v6  ; v0 = 10
    v1 = stack_addr.i64 ss0
    v5 = stack_addr.i64 ss1
    store notrap v1, v5
    v2 = iconst.i32 42
    v4 = stack_addr.i64 ss1
    v3 = load.i64 notrap v4
    store v2, v3  ; v2 = 42
    return
}
