src/tests/snapshots/cendol__tests__codegen_basics__store_statement_lowering.snap
---
source: src/tests/codegen_basics.rs
assertion_line: 98
expression: clif_ir
---
; Function: main
function u0:0() system_v {
    ss0 = explicit_slot 4

block0:
    v0 = iconst.i32 42
    v1 = stack_addr.i64 ss0
    store notrap v0, v1  ; v0 = 42
    return
}
